services/ae-ano-detection/model-serving/kubernetes/ae-ano-detection.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: ae-ano-detection-stateful
  labels:
    app: ae-ano-detection
spec:
  serviceName: ae-ano-detection
  replicas: 1
  selector:
    matchLabels:
      app: ae-ano-detection
  template:
    metadata:
      labels:
        app: ae-ano-detection
    spec:
      containers:
      - name: ae-ano-detection
        image: ghcr.io/csia-pme/csia-pme-ae-ano-detection:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
