services/ae-ano-detection/model-serving/kubernetes/ae-ano-detection.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ae-ano-detection-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: ae-ano-detection-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ae-ano-detection-service
            port:
              number: 80
  tls:
    - hosts:
        - ae-ano-detection-csia-pme.kube.isc.heia-fr.ch
